# cpp_comp_multi

./: .env.example  .gitignore  README.md
project/: .gitignore  CMakeLists.txt  CMakeLists_def.txt  autobash.sh
project/linux/: CMakeLists.txt
project/win/: CMakeLists.txt  comp.sh
